cmake_minimum_required(VERSION 3.1)

project(aoc)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")

add_executable(aoc-1 aoc-1.cpp)
add_executable(aoc-2 aoc-2.cpp)
add_executable(aoc-3 aoc-3.cpp)
add_executable(aoc-4 aoc-4.cpp)
add_executable(aoc-5 aoc-5.cpp)
add_executable(aoc-6 aoc-6.cpp)
add_executable(aoc-9 aoc-9.cpp)
add_executable(aoc-10 aoc-10.cpp)
